--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-leap-day
+title: CRE Anaytics
+description: Analytic exploration of models & heuristics for mechanized reasoning in complex systems - mainly, CRE investments and asset management
