--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-midnight
 title: CRE Analytics
 description: Analytic exploration of models & heuristics for mechanized reasoning in complex systems - mainly, CRE investments and asset management
